Fixed individual message spacing

--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -17,11 +17,10 @@ mcontainer {
 ccontainer {
   background: #bcbcbc;
   border-radius: 10px;
-  padding-top: 0px;
   white-space: pre-wrap;
-  padding-left: 5px;
+  padding-left: 20px;
   padding-bottom: 13px;
-  padding-right: 5px;
+  padding-right: 20px;
   display: block;
   text-align: justify;
   margin-top: 12px;
